objects/Lead/fields/Akce__c.field-meta.xml
<CustomField>
    <fullName>Akce__c</fullName>
    <label>Akce</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2015 - FOS Jaro</fullName>
            </value>
            <value>
                <fullName>2015 - FOS Podzim</fullName>
            </value>
            <value>
                <fullName>2016 - FOS Jaro</fullName>
            </value>
            <value>
                <fullName>2016 - FOS Podzim</fullName>
            </value>
            <value>
                <fullName>2017 - FOS Jaro</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Na kole vinohrady</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Lichtenštejnské stezky</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Májové putování</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Strážnicko</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Velkomoravské stezky</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Letní putování Mikulovsko</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Putování za burčákem MH</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Tour de burčák</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Uzavírání Licht Stezek</fullName>
            </value>
            <value>
                <fullName>2015 - MVS - Na kole vinohrady Podzim</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Na kole vinohrady Jaro</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Májové putování MH</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Otevírání Licht stezek</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Krajem kvetoucí révy</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Putování Kyjovsko</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Hudba na kole</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Stezky Mikulovsko</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Putování za burčákem MH</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Tour de burčák</fullName>
            </value>
            <value>
                <fullName>2016 - MVS - Na kole vinohrady Podzim</fullName>
            </value>
            <value>
                <fullName>2017 - MVS - Na kole vinohrady Jaro</fullName>
            </value>
            <value>
                <fullName>2017 - MVS - Májové putování</fullName>
            </value>
            <value>
                <fullName>2017 - MVS - Krajem kvetoucí révy</fullName>
            </value>
            <value>
                <fullName>2017 - MVS - Strážnicko</fullName>
            </value>
            <value>
                <fullName>2017 - MVS - Stezky Mikulovsko</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>