objects/Lead/fields/Jazyk__c.field-meta.xml
<CustomField>
    <fullName>Jazyk__c</fullName>
    <description>Jazyk e-mailu</description>
    <inlineHelpText>Jazyk e-mailu</inlineHelpText>
    <label>Jazyk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CZ</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>