objects/Lead/fields/Nazev_projektu__c.field-meta.xml
<CustomField>
    <fullName>Nazev_projektu__c</fullName>
    <label>Název projektu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>