objects/Lead/fields/Osloveni__c.field-meta.xml
<CustomField>
    <fullName>Osloveni__c</fullName>
    <label>Osloveni</label>
    <length>40</length>
    <type>Text</type>
</CustomField>