objects/Lead/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fos</fullName>
                <label>FOS</label>
            </value>
            <value>
                <fullName>mvs</fullName>
                <label>MVS</label>
            </value>
            <value>
                <fullName>vzb</fullName>
                <label>VZB</label>
            </value>
            <value>
                <fullName>RunCzech</fullName>
            </value>
            <value>
                <fullName>Pro vodu</fullName>
            </value>
            <value>
                <fullName>Bylinková dílna</fullName>
            </value>
            <value>
                <fullName>Stromy svobody</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>