objects/Lead/fields/Rok_ucasti__c.field-meta.xml
<CustomField>
    <fullName>Rok_ucasti__c</fullName>
    <label>Rok účasti</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2018 - II</fullName>
            </value>
            <value>
                <fullName>2018 - III</fullName>
            </value>
            <value>
                <fullName>2018 - IV</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>