objects/Lead/fields/skola_fakulta__c.field-meta.xml
<CustomField>
    <fullName>skola_fakulta__c</fullName>
    <label>Škola/fakulta</label>
    <length>128</length>
    <type>Text</type>
</CustomField>