objects/Lead/fields/T_m__c.field-meta.xml
<CustomField>
    <fullName>T_m__c</fullName>
    <label>Tým</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greenways</fullName>
            </value>
            <value>
                <fullName>Stromy</fullName>
            </value>
            <value>
                <fullName>Mobilita</fullName>
            </value>
            <value>
                <fullName>Otevřená zahrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>