objects/Lead/fields/Typ_ucasti__c.field-meta.xml
<CustomField>
    <fullName>Typ_ucasti__c</fullName>
    <label>Typ účasti</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.místo</fullName>
            </value>
            <value>
                <fullName>2.místo</fullName>
            </value>
            <value>
                <fullName>3.místo</fullName>
            </value>
            <value>
                <fullName>Budova</fullName>
            </value>
            <value>
                <fullName>Město</fullName>
            </value>
            <value>
                <fullName>Krajina</fullName>
            </value>
            <value>
                <fullName>Finalista</fullName>
            </value>
            <value>
                <fullName>přihlášený</fullName>
            </value>
            <value>
                <fullName>Workshop Od nápadu k realizaci 16.12.</fullName>
            </value>
            <value>
                <fullName>Workshop Prezentace 8.4.</fullName>
            </value>
            <value>
                <fullName>Workshop Prezentace 27.2.</fullName>
            </value>
            <value>
                <fullName>Workshop od nápadu k realiazci 13.10.</fullName>
            </value>
            <value>
                <fullName>zvláštní cena do 20 let</fullName>
            </value>
            <value>
                <fullName>Workshop Mám nápad 30.11.</fullName>
            </value>
            <value>
                <fullName>Uchazeč</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>