objects/Lead/fields/Ucast__c.field-meta.xml
<CustomField>
    <fullName>Ucast__c</fullName>
    <label>Účast</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>