objects/Lead/fields/VZB_mail_1__c.field-meta.xml
<CustomField>
    <fullName>VZB_mail_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VZB mail 1</label>
    <type>Checkbox</type>
</CustomField>