objects/Lead/listViews/Bylinkov_d_lny.listView-meta.xml
<ListView>
    <fullName>Bylinkov_d_lny</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Program__c</columns>
    <columns>Rok_ucasti__c</columns>
    <columns>T_m__c</columns>
    <columns>Akce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Bylinková dílna</value>
    </filters>
    <label>Bylinkové dílny</label>
    <language>cs</language>
</ListView>