objects/Lead/listViews/RunCzech.listView-meta.xml
<ListView>
    <fullName>RunCzech</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>T_m__c</columns>
    <columns>Program__c</columns>
    <columns>Rok_ucasti__c</columns>
    <columns>Jazyk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>RunCzech</value>
    </filters>
    <filters>
        <field>Rok_ucasti__c</field>
        <operation>includes</operation>
        <value>2018 - IV</value>
    </filters>
    <label>RunCzech - 2018 - IV</label>
    <language>cs</language>
</ListView>