objects/Lead/listViews/Vsechny_kontakty.listView-meta.xml
<ListView>
    <fullName>Vsechny_kontakty</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Rok_ucasti__c</columns>
    <columns>Program__c</columns>
    <columns>T_m__c</columns>
    <columns>Akce__c</columns>
    <filterScope>Everything</filterScope>
    <label>Všechny kontakty</label>
    <language>cs</language>
</ListView>